--- a/new-version/accountManage-details.html
+++ b/new-version/accountManage-details.html
@@ -189,16 +189,46 @@
 						<li>车产信息</li>
 					</ul>
 				</div>
+				<script type="text/javascript">
+				$(function(){
+					$("#j_set_IDNO").click(function(){
+						if($(this).hasClass("v")){
+						$(this).removeClass("v");
+						$(this).html("修改");
+						$("#box_j_set_IDNO").slideUp();
+					}
+					else{
+						$(this).addClass("v");
+						$(this).html("取消修改");
+						// if($.trim($("#setting-email-box").html())==""){
+						// 	var ajaxurl = '{url x="index" r="uc_account#email"}';
+						// 	$.ajax({
+						// 		url:ajaxurl,
+						// 		data:"&step=1",
+						// 		type:"post",
+						// 		dataType:"text",
+						// 		success:function(ajaxobj){
+						// 			$("#setting-email-box").html(ajaxobj);
+						// 			$("#setting-email-box").slideDown();
+						// 		}
+						// 	});
+						// }
+						else
+							$("#box_j_set_IDNO").slideDown();
+					}
+					});
+				});
+				</script>
 				<div class="account_main">
 					<div class="account_info">
 						<ul>
 							<li><strong>绑定手机</strong><span>139****5737</span></li>
-							<li><strong>实名认证</strong><span class="red">未设置</span><i>设置</i>
-								<div class="account_realname">
+							<li><strong>实名认证</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_IDNO">设置</a></i>
+								<div class="account_realname" id="box_j_set_IDNO">
 									<ul>
 										<li><label for="realname"><i>*</i>真实姓名：</label><input type="text" name="realname"></li>
 										<li><label for="idcard"><i>*</i>身份证号：</label><input type="text" name="idcard"></li>
-										<li><input type="submit" class="sub_btn" value="保存"></li>
+										<li><input type="submit" class="sub_btn" value="认证" style="cursor:pointer;"></li>
 									</ul>
 								</div>
 							</li>
