--- a/new-version/index.html
+++ b/new-version/index.html
@@ -148,16 +148,16 @@
 	<!-- <img src="images/banner.jpg" alt="" class="dis_block" style="width:100%;" /> -->
 
 	<!-- 注册与登录 -->
-	<div class="pos_abs register_log over_hidden bg-white p10 dis_none">
+	<div class="pos_abs register_log over_hidden bg-white p10">
 		<ul class="register_log_hd txt-center f16 clearfix mb10">
 			<li class="cur">立即登录</li>
 			<li><a href="#">免费注册</a></li>
 		</ul>
 		<div class="register_log_bd" style="display:block;">
 			<form>
-				<input type="text" name="" class="text mb10" value="输入手机号" />
-				<input type="text" name="" class="text mb10" value="输入密码" />
-				<!--<div><input type="text" name="" class="text codes-input vertical_middle" value="输入验证码" /> <span class="codes ml10"><img src="images/none/codes.jpg"></span></div>-->
+				<input type="text" name="" class="text mb14" value="输入手机号" />
+				<input type="text" name="" class="text mb14" value="输入密码" />
+				<div><input type="text" name="" class="text codes-input vertical_middle" value="输入验证码" /> <span class="codes ml10"><img src="images/none/codes.jpg"></span></div>
 				<input type="button" name="" class="btn_orange white mt20" value="登录" />
 			</form>
 		</div>
@@ -172,11 +172,11 @@
 		</div>-->
 	</div>
 	<!-- 已登录 -->
-	<div class="pos_abs already_log over_hidden p20 white f16">
-		<h4 class="normal f20 mb30 pb10 pt10">量众易贷欢迎您！</h4>
+	<div class="pos_abs already_log over_hidden pt20 pb20 pl15 pr15 white f16 dis_none">
+		<h4 class="normal f20 mb30 pb10 pt20">量众易贷欢迎您！</h4>
 		<p class="mb30">您当前的账户：185****9760</p>
 		<div>
-			<a href="#" class="button btn_orange white txt-center">管理我的账户</a><a href="#" class="orange ml20">安全退出</a>
+			<a href="#" class="button btn_orange white txt-center w160">管理我的账户</a><a href="#" class="orange ml20">安全退出</a>
 		</div>
 	</div>
 </div>
