--- a/new-version/loan-borrowList.html
+++ b/new-version/loan-borrowList.html
@@ -145,58 +145,26 @@
 				<div class="search-filter ml30 pl10 mt30 mb30"><em class="mr10">筛选：</em><span class="selected">全部</span><span>审核阶段</span><span>还款阶段</span><span>逾期中</span></div>
 				<div class="table table-fixed loan-lists txt-center line-height-1"> 
 					<ul class="tHead clearfix bg-f5 f14">
-						<li class="no">借款编号</li>
-						<li class="loan-amount">借款金额<br/>(元)</li>
-						<li class="apr">年利率</li>
-						<li class="pay-style">还款方式</li>
-						<li class="repay-money">应还款<br/>金额(元)</li>
-						<li class="num">剩余期数<br/>/总期数</li>
-						<li class="date">下个还款日</li>
-						<li class="status">当前状态</li>
-						<li class="operate">操作</li>
-						<li class="view">查看</li>
-					</ul>
+                        <li class="no">借款标题</li>
+                        <li class="loan-amount">借款金额<br>(元)</li>
+                        <li class="apr">年利率</li>
+                        <li class="pay-style">还款方式</li>
+                        <li class="status">当前状态</li>
+                        <li class="date">发布日期</li>
+                    </ul>
 					<ul class="clearfix">
 						<li class="no f12"><a href="#" class="blue txt-nowrap" title="XZX164B9KXZX164B9KXZX164B9KXZX164B9K">XZX164B9KXZX164B9KXZX164B9KXZX164B9K</a><a href="#" class="blue dis_block">查看协议</a></li>
 						<li class="loan-amount txt-right">2.00</li>
 						<li class="apr">9.88%</li>
 						<li class="pay-style">还本付息</li>
-						<li class="repay-money txt-right">2.01</li>
-						<li class="num">0/1</li>
-						<li class="date">2016-05-27</li>
 						<li class="status"><span class="green">正常还款中</span></li>
-						<li class="operate"></li>
-						<li class="view"></li>
-					</ul>
-					<ul class="clearfix">
-						<li class="no f12"><a href="#" class="blue txt-nowrap">XZX164B9K</a><a href="#" class="blue">查看协议</a></li>
-						<li class="loan-amount txt-right">2.255.00</li>
-						<li class="apr">9.88%</li>
-						<li class="pay-style">还本付息</li>
-						<li class="repay-money txt-right">1,000,000</li>
-						<li class="num">0/1</li>
 						<li class="date">2016-05-27</li>
-						<li class="status"><span class="green">正常还款中</span></li>
-						<li class="operate"></li>
-						<li class="view"></li>
-					</ul>
-					<ul class="clearfix">
-						<li class="no f12"><a href="#" class="blue txt-nowrap">XZX164B9K</a><a href="#" class="blue">查看协议</a></li>
-						<li class="loan-amount txt-right">2.00</li>
-						<li class="apr">9.88%</li>
-						<li class="pay-style">还本付息</li>
-						<li class="repay-money txt-right">2.01</li>
-						<li class="num">0/1</li>
-						<li class="date">2016-05-27</li>
-						<li class="status"><span class="green">正常还款中</span></li>
-						<li class="operate"></li>
-						<li class="view"></li>
 					</ul>
 				</div>
 			</div>
 			<!-- 历史借款 -->
 			<div class="tab_recharge_bd"> 
-				<div class="table history-lists txt-center line-height-1 mt30"> 
+				<div class="table table-fixed history-lists txt-center line-height-1 mt30"> 
 					<ul class="tHead clearfix bg-f5 f14">
 						<li class="no">借款编号</li>
 						<li class="loan-amount">借款总金额<br/>(元)</li>
@@ -207,7 +175,7 @@
 						<li class="status">借款状态</li>
 					</ul>
 					<ul class="clearfix">
-						<li class="no"><a href="#" class="blue f12">XZX164B9K查看协议</a></li>
+						<li class="no"><a href="#" class="blue txt-nowrap" title="XZX164B9KXZX164B9KXZX164B9KXZX164B9K">XZX164B9KXZX164B9KXZX164B9KXZX164B9K</a><a href="#" class="blue dis_block">查看协议</a></li>
 						<li class="loan-amount txt-right">2.00</li>
 						<li class="loan-term">3个月</li>
 						<li class="apr">2.01%</li>
