--- a/new-version/user_center.html
+++ b/new-version/user_center.html
@@ -152,9 +152,9 @@
 				<li class="fl"><span>代收回款(元)：<em>0.00</em></span></li>
 			</ul>
 			<ul class="border-bot-e1 clearfix ml20 mr30 statistics f20 pl60 pt40 pb40">
-				<li class="fl"><i class="iconfont txt-center mr10" style="background:#ff6805;">&#xe616;</i><span>红包(元)：<em>0.00</em></span></li>
-				<li class="fl"><i class="iconfont txt-center mr10" style="background:#83b8e4;">&#xe615;</i><span>加息券(张)：<em>0</em></span></li>
-				<li class="fl"><i class="iconfont txt-center mr10" style="background:#b2cf75;">&#xe614;</i><span>体验金(元)：<em>0.00</em></span></li>
+				<li class="fl"><i class="iconfont txt-center mr10 f28" style="background:#ff6805;">&#xe616;</i><span>红包(元)：<em>0.00</em></span></li>
+				<li class="fl"><i class="iconfont txt-center mr10 f26" style="background:#83b8e4;">&#xe615;</i><span>加息券(张)：<em>0</em></span></li>
+				<li class="fl"><i class="iconfont txt-center mr10 f24" style="background:#b2cf75;">&#xe614;</i><span>体验金(元)：<em>0.00</em></span></li>
 			</ul>
 			<div class="pl60 pt40 pb40 f18 ml20 mr30"><a href="#" class="button-angle btn_blue mr20 txt-center">充值</a><a href="#" class="button-angle btn-orange mr20 txt-center">提现</a><a href="#" class="button-border mr20 txt-center">理财</a><a href="#" class="button-border mr20 txt-center">还款</a></div>
 		</div>
@@ -186,7 +186,7 @@
 					<li class="fl"><a href="#" class="orange">查看</a></li>
 				</ul>
 			</div>
-			<h4 class="title normal f18 pl20 mt30">借款用户<span class="ml20 f12 gray-64">待还总金额￥0.00</span><a href="#" class="fr gray-90 f12">更多<i class="iconfont gray-90 f10">&#xe604;</i></a></h4>
+			<h4 class="title normal f18 pl20 mt30">借款用户<span class="ml20 f12 gray-64">待还总金额￥0.00</span><a href="#" class="fr gray-90 f12">更多<i class="iconfont gray-90 f8">&#xe604;</i></a></h4>
 			<div class="table_ul loan-users txt-center gray-64 mt20">
 				<ul class="clearfix bg-f5 f14">
 					<li class="fl">借款标题</li>
