--- a/new-version/loan-repayment.html
+++ b/new-version/loan-repayment.html
@@ -138,46 +138,39 @@
 				<h4 class="normal f16 pl10 repayment-title ml20">还款列表</h4>
 			</div>
 			<div class="search-filter ml30 pl10 mt30 mb30"><em class="mr10">筛选：</em><span class="selected">全部</span><span>审核阶段</span><span>还款阶段</span><span>逾期中</span></div>
-			<div class="table history-lists txt-center line-height-1"> 
+			<div class="table repay-lists table-fixed txt-center line-height-1 mt20">
 				<ul class="tHead clearfix bg-f5 f14">
-					<li class="no">还款编号</li>
-					<li class="loan-amount">还款金额<br/>(元)</li>
+					<li class="title">借款标题</li>
+					<li class="loan-amount">借款金额<br/>(元)</li>
 					<li class="apr">年利率</li>
-					<li class="pay-style">还款方式</li>
+					<li class="pay-style">借款期限</li>
 					<li class="date">下个还款日</li>
-					<li class="status">当前状态</li>
+					<li class="month-repay">月还款额</li>
+					<li class="penalty">罚息</li>
+					<li class="yihuan">已还</li>
 					<li class="operate">操作</li>
-					<li class="view">查看</li>
 				</ul>
-				<ul class="clearfix">
-					<li class="no"><a href="#" class="blue f12">XZX164B9K查看协议</a></li>
-					<li class="loan-amount txt-right">2.00</li>
-					<li class="apr">9.88%</li>
-					<li class="pay-style">还本付息</li>
+				<ul class="clearfix repay_ul">
+					<li class="title"><a href="" class="blue f12 txt-nowrap" title="XZX164B9KXZX164B9KXZX164B9KXZX164B9K">XZX164B9KXZX164B9KXZX164B9KXZX164B9K</a> <a href="" class="blue f12">查看协议</a></li>
+					<li class="loan-amount txt-right">0.3万</li>
+					<li class="apr">10.0%</li>
+					<li class="pay-style">12个月</li>
 					<li class="date">2016-05-27</li>
-					<li class="status"><span class="green">正常还款中</span></li>
-					<li class="operate"></li>
-					<li class="view"></li>
+					<li class="month-repay"><span class="green">1526.32</span></li>
+					<li class="penalty">0</li>
+					<li class="yihuan">0</li>
+					<li class="operate"><a href="#" class="btn-small bg-blue white">还款</a></li>
 				</ul>
-				<ul class="clearfix">
-					<li class="no"><a href="#" class="blue f12">XZX164B9K查看协议</a></li>
-					<li class="loan-amount txt-right">2.255.00</li>
-					<li class="apr">9.88%</li>
-					<li class="pay-style">还本付息</li>
+				<ul class="clearfix repay_ul">
+					<li class="title"><a href="" class="blue f12 txt-nowrap" title="XZX164B9KXZX164B9KXZX164B9KXZX164B9K">XZX164B9KXZX164B9KXZX164B9KXZX164B9K</a> <a href="" class="blue f12">查看协议</a></li>
+					<li class="loan-amount txt-right">0.3万</li>
+					<li class="apr">10.0%</li>
+					<li class="pay-style">12个月</li>
 					<li class="date">2016-05-27</li>
-					<li class="status"><span class="green">正常还款中</span></li>
-					<li class="operate"></li>
-					<li class="view"></li>
-				</ul>
-				<ul class="clearfix">
-					<li class="no"><a href="#" class="blue f12">XZX164B9K查看协议</a></li>
-					<li class="loan-amount txt-right">2.00</li>
-					<li class="apr">9.88%</li>
-					<li class="pay-style">还本付息</li>
-					<li class="date">2016-05-27</li>
-					<li class="status"><span class="green">正常还款中</span></li>
-					<li class="operate"></li>
-					<li class="view"></li>
+					<li class="month-repay"><span class="green">1526.32</span></li>
+					<li class="penalty">0</li>
+					<li class="yihuan">0</li>
+					<li class="operate"><a href="#" class="btn-small bg-blue white">还款</a></li>
 				</ul>
 			</div>
 		</div>
