--- a/new-version/x_loan-repayment.html
+++ b/new-version/x_loan-repayment.html
@@ -15,7 +15,6 @@
 		$(function(){
 			nav(); //主导航
 			subNav('.nav-ueser-first span' ,'.subnav-user' ,'.nav-ueser-first');//侧导航
-			selectedOption('.search-filter span');
 		});
 	</script>
 </head>
@@ -28,7 +27,7 @@
 		<!--<a href="#">新手指引</a>|<a href="#">最新活动</a>|<a href="#"><i class="iconfont f20 mr5 vertical_middle">&#xe602;</i><span class="vertical_middle">下载客户端</span></a>|<a href="#" class="orange">登录</a>|<a href="#">免费注册</a>-->
 			<div class="fl dis_none">
 				<div class="user_login fl" >
-					<em>您好，</em><a href="">139****5735</a><a href="">退出</a>	
+					<em>您好，</em><a href="">139****5735</a><a href="">退出</a>
 				</div>
 				<ul  class="user_center fl" >
 					<li class="user_li"><a href="">账户中心</a>
@@ -133,48 +132,48 @@
 	<!-- <%template src="_left-nav.html"%> -->
 	<!-- 右侧内容 -->
 	<div class="w970 fr pt40">
-		<div class="bg-white p20 f14"> 
-			<div class="border-bot-e1 pb10">
+		<div class="bg-white p20 f14">
+			<div class="pb10">
 				<ul class="tab_recharge_hd border-bot-e1 txt-center pl20 f16 clearfix">
-				<li class="cur fl mr30"><span>还款列表</span></li>
-				<li class="fl mr30"><span>已还清借款</span></li>
-			</ul>
-			<div class="clear"></div>
+					<li class="cur fl mr30"><span>还款列表</span></li>
+					<li class="fl mr30"><span>已还清借款</span></li>
+				</ul>
+				<div class="clear"></div>
 			</div>
 			<!--<div class="search-filter ml30 pl10 mt30 mb30"><em class="mr10">筛选：</em><span class="selected">全部</span><span>审核阶段</span><span>还款阶段</span><span>逾期中</span></div>-->
-			<div class="table history-lists txt-center line-height-1"> 
+			<div class="table repay-lists table-fixed txt-center line-height-1 mt20">
 				<ul class="tHead clearfix bg-f5 f14">
-					<li class="no">借款标题</li>
+					<li class="title">借款标题</li>
 					<li class="loan-amount">借款金额<br/>(元)</li>
 					<li class="apr">年利率</li>
-					<li class="pay-style">期限</li>
+					<li class="pay-style">借款期限</li>
 					<li class="date">下个还款日</li>
-					<li class="status">月还款额</li>
-					<li class="status">罚息</li>
-					<li class="operate">已还</li>
-					<li class="view">操作</li>
+					<li class="month-repay">月还款额</li>
+					<li class="penalty">罚息</li>
+					<li class="yihuan">已还</li>
+					<li class="operate">操作</li>
 				</ul>
 				<ul class="clearfix repay_ul">
-					<li class="no"><a href="" class="blue f12">XZX164B9K</a> <a href="" class="blue f12">查看协议</a></li>
+					<li class="title"><a href="" class="blue f12 txt-nowrap" title="XZX164B9KXZX164B9KXZX164B9KXZX164B9K">XZX164B9KXZX164B9KXZX164B9KXZX164B9K</a> <a href="" class="blue f12">查看协议</a></li>
 					<li class="loan-amount txt-right">0.3万</li>
 					<li class="apr">10.0%</li>
 					<li class="pay-style">12个月</li>
 					<li class="date">2016-05-27</li>
-					<li class="status"><span class="green">1526.32</span></li>
-					<li class="operate">0</li>
-					<li class="operate">0</li>
-					<li class="view"><input type="button" value="还款" class="repay_btn"></li>
+					<li class="month-repay"><span class="green">1526.32</span></li>
+					<li class="penalty">0</li>
+					<li class="yihuan">0</li>
+					<li class="operate"><a href="#" class="btn-small bg-blue white">还款</a></li>
 				</ul>
 				<ul class="clearfix repay_ul">
-					<li class="no"><a href="" class="blue f12">XZX164B9K</a> <a href="" class="blue f12">查看协议</a></li>
+					<li class="title"><a href="" class="blue f12 txt-nowrap" title="XZX164B9KXZX164B9KXZX164B9KXZX164B9K">XZX164B9KXZX164B9KXZX164B9KXZX164B9K</a> <a href="" class="blue f12">查看协议</a></li>
 					<li class="loan-amount txt-right">0.3万</li>
 					<li class="apr">10.0%</li>
 					<li class="pay-style">12个月</li>
 					<li class="date">2016-05-27</li>
-					<li class="status"><span class="green">1526.32</span></li>
-					<li class="operate">0</li>
-					<li class="operate">0</li>
-					<li class="view"><input type="button" value="还款" class="repay_btn"></li>
+					<li class="month-repay"><span class="green">1526.32</span></li>
+					<li class="penalty">0</li>
+					<li class="yihuan">0</li>
+					<li class="operate"><a href="#" class="btn-small bg-blue white">还款</a></li>
 				</ul>
 			</div>
 		</div>
