--- a/new-version/x_loan-repaymentdetail.html
+++ b/new-version/x_loan-repaymentdetail.html
@@ -15,7 +15,6 @@
 		$(function(){
 			nav(); //主导航
 			subNav('.nav-ueser-first span' ,'.subnav-user' ,'.nav-ueser-first');//侧导航
-			selectedOption('.search-filter span');
 		});
 	</script>
 </head>
@@ -134,7 +133,7 @@
 	<!-- 右侧内容 -->
 	<div class="w970 fr pt40">
 		<div class="bg-white p20 f14"> 
-			<div class="border-bot-e1 pb10">
+			<div class="pb10">
 				<ul class="tab_recharge_hd border-bot-e1 txt-center pl20 f16 clearfix">
 				<li class="fl mr30"><span>还款列表</span></li>
 				<li class="cur fl mr30"><span>已还清借款</span></li>
@@ -142,22 +141,22 @@
 			<div class="clear"></div>
 			</div>
 			<!--<div class="search-filter ml30 pl10 mt30 mb30"><em class="mr10">筛选：</em><span class="selected">全部</span><span>审核阶段</span><span>还款阶段</span><span>逾期中</span></div>-->
-			<div class="table history-lists txt-center line-height-1"> 
+			<div class="table table-fixed loan-lists txt-center line-height-1 mt20"> 
 				<ul class="tHead clearfix bg-f5 f14">
-					<li class="no">借款标题</li>
-					<li class="loan-amount">借款金额<br/>(元)</li>
-					<li class="apr">年利率</li>
-					<li class="pay-style">期限</li>
-					<li class="date">发布日期</li>
-					<li class="view">状态</li>
-				</ul>
-				<ul class="clearfix repay_ul">
-					<li class="no"><a href="" class="blue f12">XZX164B9K</a></li>
-					<li class="loan-amount txt-right">0.3万</li>
-					<li class="apr">10.0%</li>
-					<li class="pay-style">12个月</li>
+                    <li class="no">借款标题</li>
+                    <li class="loan-amount">借款金额<br>(元)</li>
+                    <li class="apr">年利率</li>
+                    <li class="pay-style">借款期限</li>
+                    <li class="status">还款时间</li>
+                    <li class="date">详情</li>
+                </ul>
+				<ul class="clearfix">
+					<li class="no f12"><a href="#" class="blue txt-nowrap" title="XZX164B9KXZX164B9KXZX164B9KXZX164B9K">XZX164B9KXZX164B9KXZX164B9KXZX164B9K</a><a href="#" class="blue dis_block">查看协议</a></li>
+					<li class="loan-amount txt-right">2.00</li>
+					<li class="apr">9.88%</li>
+					<li class="pay-style">还本付息</li>
+					<li class="status"><span class="green">正常还款中</span></li>
 					<li class="date">2016-05-27</li>
-					<li class="view"><a href="" class="blue f12">详情</a></li>
 				</ul>
 			</div>
 		</div>
