--- a/new-version/x_project-details.html
+++ b/new-version/x_project-details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
 	<title>项目详情</title>
 	<link rel="stylesheet" type="text/css" href="css/public.css">
 	<link rel="stylesheet" type="text/css" href="css/main_style.css">
@@ -161,7 +161,7 @@
 </div>
 <!-- tab-项目介绍&投资列表&还款计划 -->
 <div class="border w1198 bg-white tab-project mt20">
-	<ul class="tab-project_hd f18 pl10 pr10">
+	<ul class="tab-project_hd f18 pl10 pr10 clearfix">
 		<li class="cur">项目介绍<span></span></li>
 		<li>投资列表</li>
 		<li>还款计划</li>
@@ -224,67 +224,67 @@
 	<!--投资列表-->
 	<div class="tab-project_bd p30">
 		<div class="table txt-center invest table_collapse f16">
-		<ul class="tHead f14">
-				<li>序号</li>
-				<li>投资时间</li>
-				<li>投资人</li>
-				<li>投资金额（元）</li>
+			<ul class="tHead f14 clearfix">
+				<li>投标人</li>
+				<li>投标金额</li>
+				<li>投标方式</li>
+				<li>投标时间</li>
 			</ul>
-			<ul>
-				<li class="f12">1</li>
-				<li>2016-05-25 14:30:11</li>
-				<li>139****5735</li>
-				<li>￥536.36</li>
+			<ul class="clearfix">
+				<li class="f12">dw****28</li>
+				<li class="orange">￥536.36</li>
+				<li><i class="iconfont">&#xe608;</i></li>
+				<li>4小时前</li>
 			</ul>
-			<ul>
-				<li class="f12">1</li>
-				<li>2016-05-25 14:30:11</li>
-				<li>139****5735</li>
-				<li>￥536.36</li>
+			<ul class="clearfix">
+				<li class="f12">dwb****28</li>
+				<li class="orange">￥536.36</li>
+				<li><i class="iconfont">&#xe608;</i></li>
+				<li>4小时前</li>
 			</ul>
-			<ul>
-				<li class="f12">1</li>
-				<li>2016-05-25 14:30:11</li>
-				<li>139****5735</li>
-				<li>￥536.36</li>
+			<ul class="clearfix">
+				<li class="f12">dw****28</li>
+				<li class="orange">￥536.36</li>
+				<li><i class="iconfont">&#xe609;</i></li>
+				<li>4小时前</li>
 			</ul>
-			<ul>
-				<li class="f12">1</li>
-				<li>2016-05-25 14:30:11</li>
-				<li>139****5735</li>
-				<li>￥536.36</li>
+			<ul class="clearfix">
+				<li class="f12">dw****28</li>
+				<li class="orange">￥536.36</li>
+				<li><i class="iconfont">&#xe609;</i></li>
+				<li>4小时前</li>
 			</ul>
-			
+
 		</div>
 	</div>
 	<!--投资记录-->
 	<div class="tab-project_bd p30">
 		<div class="table txt-center invest table_collapse f16">
-			<ul class="tHead f14">
+			<ul class="tHead f14 clearfix">
 				<li>期数</li>
 				<li>应还本息</li>
 				<li>到期时间</li>
 				<li>状态</li>
 			</ul>
-			<ul>
+			<ul class="clearfix">
 				<li class="f12">1/12</li>
 				<li>￥536.36</li>
 				<li>2016-10-1</li>
 				<li>待还</li>
 			</ul>
-			<ul>
+			<ul class="clearfix">
 				<li class="f12">1/12</li>
 				<li>￥536.36</li>
 				<li>2016-10-1</li>
 				<li>待还</li>
 			</ul>
-			<ul>
+			<ul class="clearfix">
 				<li class="f12">1/12</li>
 				<li>￥536.36</li>
 				<li>2016-10-1</li>
 				<li>待还</li>
 			</ul>
-			<ul>
+			<ul class="clearfix">
 				<li class="f12">1/12</li>
 				<li>￥536.36</li>
 				<li>2016-10-1</li>
