--- a/new-version/security.html
+++ b/new-version/security.html
@@ -29,7 +29,7 @@
 				}else{
 					$('#nav-safe').removeClass('nav-safe-fixed');
 				};
-	    	});	
+	    	});
 		});
 	</script>
 </head>
@@ -42,7 +42,7 @@
 		<!--<a href="#">新手指引</a>|<a href="#">最新活动</a>|<a href="#"><i class="iconfont f20 mr5 vertical_middle">&#xe602;</i><span class="vertical_middle">下载客户端</span></a>|<a href="#" class="orange">登录</a>|<a href="#">免费注册</a>-->
 			<div class="fl dis_none">
 				<div class="user_login fl" >
-					<em>您好，</em><a href="">139****5735</a><a href="">退出</a>	
+					<em>您好，</em><a href="">139****5735</a><a href="">退出</a>
 				</div>
 				<ul  class="user_center fl" >
 					<li class="user_li"><a href="">账户中心</a>
@@ -108,7 +108,7 @@
 </div>
 <!-- 导航 -->
 <div id="nav-safe" class="bg-blue-deep nav-safe txt-center f18">
-	<ul class="w1200 clearfix"> 
+	<ul class="w1200 clearfix">
 		<li><a href="#introduction" class="cur">平台介绍</a></li>
 		<li><a href="#business">业务模式</a></li>
 		<li><a href="#fundsGuarantee">资金保障</a></li>
@@ -120,10 +120,10 @@
 </div>
 <a name="introduction"></a>
 <div class="introduction w1200 mlr_auto clearfix dis_table">
-	<div class="table-cell safe-icon vertical_middle line-height-1"> 
-		<i class="iconfont orange f400">&#xe629;</i> 
+	<div class="table-cell safe-icon vertical_middle line-height-1">
+		<i class="iconfont orange f400">&#xe629;</i>
 	</div>
-	<div class="table-cell safe-cont vertical_middle"> 
+	<div class="table-cell safe-cont vertical_middle">
 		<h4 class="normal orange f34 line-height-1 mb10 pr-20">平台介绍</h4>
 		<div class="f14 content pr-20">量众易贷是由量众宏程投资管理（北京）有限公司运营，量众易贷在市场经济的飞速发展以及互联网、移动互联网快速普及的大环境下对民间资本的深入研究、整合，解决人们在生产、生活中所需的资金问题；管理经验丰富的业内精英团队为诚信的中小微企业和个人提供快捷的P2P借贷服务、信用资质评估、借款咨询等综合性服务；同时帮助投资管理者更好的抵御通货膨胀带来的资产贬值风险，实现资产配置优化、投资规划合理、财富多元化收益等；借贷者也能快速获得周转资金，改善生产生活。</div>
 	</div>
@@ -131,7 +131,7 @@
 <a name="business"></a>
 <div class="bg-f0 business-model">
 	<div class="w1200 mlr_auto blue pt80 pb80">
-		<div class="business mlr_auto txt-center pos_rel"> 
+		<!-- <div class="business mlr_auto txt-center pos_rel">
 			<span class="f30">项目审核</span>
 			<span class="f30">抵押手续</span>
 			<span class="f30">量众易贷</span>
@@ -153,26 +153,27 @@
 				<i class="iconfont f120 line-height-1">&#xe630;</i>
 				<p class="white f14 pos_abs">本金+利息</p>
 			</div>
-		</div>
+		</div> -->
+		<img src="images/model-business.png" alt="量众易贷" class="dis_block mlr_auto" />
 	</div>
 </div>
 <a name="fundsGuarantee"></a>
 <div class="fundsGuarantee w1200 mlr_auto clearfix dis_table">
-	<div class="table-cell safe-cont vertical_middle"> 
+	<div class="table-cell safe-cont vertical_middle">
 		<h4 class="normal green-deep f30 line-height-1 mb10 pl-15"><span class="f36">资金</span>保障</h4>
 		<div class="f14 content pl-15">第三方支付平台资金托管，资金去向透明、风险更低量众易贷致力于打造安心放心贴心的资金管理机制，通过权威第三方机构富有集团实现全面的用户资金托管，让平台与用户资金有效分离，真正做到了安全高效、专业规范的平台管理。</div>
 	</div>
-		<div class="table-cell safe-icon vertical_middle line-height-1"> 
-		<i class="iconfont green-deep f400">&#xe62a;</i> 
+		<div class="table-cell safe-icon vertical_middle line-height-1">
+		<i class="iconfont green-deep f400">&#xe62a;</i>
 	</div>
 </div>
 <a name="loanApproval"></a>
 <div class="bg-f0">
 	<div class="loanApproval w1200 mlr_auto clearfix dis_table">
-		<div class="table-cell safe-icon vertical_middle line-height-1"> 
-			<i class="iconfont green-light f400">&#xe62d;</i> 
+		<div class="table-cell safe-icon vertical_middle line-height-1">
+			<i class="iconfont green-light f400">&#xe62d;</i>
 		</div>
-		<div class="table-cell safe-cont vertical_middle"> 
+		<div class="table-cell safe-cont vertical_middle">
 			<h4 class="normal green-light f30 line-height-1 mb10 pr-20"><span class="f36">贷款</span>审核</h4>
 			<div class="f14 content pr-20">采取小额分散模式，实物抵押，严格的贷前审核和完善的贷中贷后管理量众易贷专注于以实物抵押的小额借款项目，并且拥有一套科学有效的贷款审核标准和方法，对借款用户进行风险评估。</div>
 		</div>
@@ -184,17 +185,17 @@
 		<h4 class="normal red-light f30 line-height-1 mb10 pl-15"><span class="f36">网站</span>安全</h4>
 		<div class="f14 content pl-15">量众易贷一直坚持以技术驱动金融创新,新平台采用更加安全的.net语言开发进行分布式部署，保证前端、后台、数据库三端分离；同时也安装了防火墙、防病毒软件及反间谍程序，通过实时跟进采纳最高精尖的互联网技术，打造最安全高效、专业规范的P2P服务平台。</div>
 	</div>
-	<div class="table-cell safe-icon vertical_middle line-height-1"> 
-		<i class="iconfont red-light f400">&#xe62b;</i> 
+	<div class="table-cell safe-icon vertical_middle line-height-1">
+		<i class="iconfont red-light f400">&#xe62b;</i>
 	</div>
 </div>
 <a name="privacyPolicy"></a>
 <div class="bg-f0">
 	<div class="privacyPolicy w1200 mlr_auto clearfix dis_table">
-		<div class="table-cell safe-icon vertical_middle line-height-1"> 
-			<i class="iconfont blue f400">&#xe62e;</i> 
+		<div class="table-cell safe-icon vertical_middle line-height-1">
+			<i class="iconfont blue f400">&#xe62e;</i>
 		</div>
-		<div class="table-cell safe-cont vertical_middle"> 
+		<div class="table-cell safe-cont vertical_middle">
 			<h4 class="normal blue f30 line-height-1 mb10 pr-20"><span class="f36">隐私</span>保护</h4>
 			<div class="f14 content pr-20">量众易贷严格遵守国家相关法律法规，对用户的隐私信息进行严格的保护。我们采用业界最先进的加密数据传输技术，用户的注册信息、账户收支信息都已进行高强度的加密处理，不会被不法分子窃取到。同时量众易贷设有严格的安全管理制定，未经允许的员工不可获取您的相关信息。</div>
 		</div>
@@ -206,8 +207,8 @@
 		<h4 class="normal yellow f30 line-height-1 mb10 pl-15"><span class="f36">法律</span>保障</h4>
 		<div class="f14 content pl-15">量众易贷致力于为广大投资人和有借款需求的人搭建一个信息透明、诚信度高、风险低、回报稳定、成本可控的互联网借贷撮合平台。借款人和投资人在量众易贷平台进行借贷，是受到法律法规、司法解释保护的一种合法借贷关系，平台通过严格的风险审核，使民间借贷更加规范、阳光、透明，更用专业的风控手段和代偿机制大大降低了坏账风险。平台项目获购满额后即生成合同，合同条款由专业律师拟定，文件合法、有效。</div>
 	</div>
-	<div class="table-cell safe-icon vertical_middle line-height-1"> 
-		<i class="iconfont yellow f400">&#xe62c;</i> 
+	<div class="table-cell safe-icon vertical_middle line-height-1">
+		<i class="iconfont yellow f400">&#xe62c;</i>
 	</div>
 </div>
 <!-- 中间 end -->
