--- a/new-version/x_project-details.html
+++ b/new-version/x_project-details.html
@@ -128,31 +128,31 @@
 	<div class="ml30 mr30 mb10 border-top-e1 clearfix pt20 pb20 pr20">
 		<div class="table fl f14 gray-64">
 			<ul>
-				<li><span class="f30 gray">￥9,000,000</span><br /><span class="f16">标的总价格(元)</span></li>
-				<li><span class="f30 orange">12%</span><br /><span class="f16">年化利率</span></li>
-				<li><span class="f30 gray">6</span><br /><span class="f16">还款期限(月)</span></li>
+				<li><span class="f16">项目总额(元)</span><br /><span class="f30 gray">￥9,000,00</span></li>
+				<li><span class="f16">年化收益率</span><br /><span class="f30 orange">12%</span></li>
+				<li><span class="f16">借款期限</span><br /><span class="f30 gray">6个月</span></li>
 			</ul>
 			<ul>
 				<li>还款方式：等额本息</li>
-				<li>每月还款：￥9999.00</li>
+				<li>发布时间：2016-06-22 14:38:40</li>
 				<li></li>
 			</ul>
 			<ul>
-				<li>提前还款费率：1.00%</li>
-				<li>剩余时间：5天</li>
+				<li>30天可转让</li>
+				<li>剩余时间：5天21小时29分钟56秒</li>
 				<li></li>
 			</ul>
 		</div>
 		<ul class="tenderAmount f16 fr">
 			<li class="clearfix mb15">
 				<div class="fl">
-					<p>可投标金额：登陆后可见</p>
+					<p>账户余额：登陆后可见</p>
 					<p class="orange f14">剩余金额：￥100000</p>
 				</div>
 				<a href="#" class="fr dis-block blue">充值</a>
 			</li>
 			<li class="f14 edit bg-white mb15 clearfix">
-				<a href="#" class="gray-90 txt-center less">-</a><span class="gray-e1 txt-center less-disable">-</span><span class="gray-b4 numBox"><em class="pl10"><i class="f18 num">500</i>元</em></span><a href="#" class="gray-90 txt-center plus">+</a>
+				<a href="#" class="gray-90 txt-center less">-</a><span class="gray-e1 txt-center less-disable">-</span><span class="gray-b4 numBox"><em class="pl10"><i class="f18 num">1</i>元</em></span><a href="#" class="gray-90 txt-center plus">+</a>
 			</li>
 			<li class="mb15">预计收益：<span class="f18 orange">10</span>元</li>
 			<li class="txt-center mb10"><input type="button" value="立即投标" class="button white btn_blue f16" style="width:250px" /></li>
