--- a/new-version/accountManage-details.html
+++ b/new-version/accountManage-details.html
@@ -16,6 +16,8 @@
 	<!-- 时间日期插件 -->
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" />
 	<script type="text/javascript" src="js/jquery-ui-datepicker.js"></script>
+	<!-- 省市区三级联动 -->
+	<script type="text/javascript" src="js/address.js"></script>
 	<script type="text/javascript">
 		$(function(){
 			nav(); //主导航
@@ -58,6 +60,26 @@
 				changeYear:false,
 				showButtonPanel: true
 			});
+
+			fnTab('.tab_recharge');  //选项卡
+			select_simulated(".provin_select",".provin_con");//模拟下拉菜单
+
+			$('.safe-info .btn-edit').click(function(){
+				$(this).parent('.safe-info').find('.edit').show();
+				$(this).parent('.safe-info').find('.info:gt(0)').hide();
+			});
+			$('.safe-info .save').click(function(){
+				$(this).parents('.safe-info').find('.edit').hide();
+				$(this).parents('.safe-info').find('.info:gt(0)').show();
+			});
+			$('.safe-info .cancel').click(function(){
+				$(this).parents('.safe-info').find('.edit').hide();
+				$(this).parents('.safe-info').find('.info:gt(0)').show();
+			});
+
+			//省市区三级联动
+			$("#sjld").sjld("#shenfen","#chengshi","#quyu");
+			$("#sjld2").sjld("#shenfen2","#chengshi2");
 
 		});
 	</script>
@@ -144,7 +166,7 @@
 			<div class="nav-ueser-first pt10 pb10">
 				<span class="dis_block f18 txt-center"><i class="iconfont mr10 orange f16">&#xe622;</i>资金管理</span>
 				<ul class="subnav-user pt10 f14">
-					<li><a href="#" class="cur">资金明细</a></li>
+					<li><a href="#">资金明细</a></li>
 					<li><a href="#">充值</a></li>
 					<li><a href="#">提现</a></li>
 				</ul>
@@ -166,7 +188,7 @@
 			<div class="nav-ueser-first pt10 pb10">
 				<span class="dis_block f18 txt-center"><i class="iconfont mr10 orange f16">&#xe61f;</i>账户管理</span>
                 <ul class="subnav-user pt10 f14">
-					<li><a href="#">安全中心</a></li>
+					<li><a href="#" class="cur">安全中心</a></li>
 					<li><a href="#">我的红包</a></li>
                     <li><a href="#">消息中心</a></li>
 				</ul>
@@ -176,99 +198,290 @@
 	<!-- <%template src="_left-nav.html"%> -->
 	<!-- 右侧内容 -->
 	<div class="w970 fr pt40">
-		<div class="bg-white p20">
-			<!--账户管理-->
-			<div class="account_manager">
-				<div class="account_top">
+		<div class="bg-white tab_recharge p20 f14">
+			<ul class="tab_recharge_hd border-bot-e1 txt-center pl20 f16 clearfix">
+				<li class="cur fl mr30"><span>个人认证</span></li>
+				<li class="fl mr30"><span>基本信息</span></li>
+				<li class="fl mr30"><span>我的资料</span></li>
+			</ul>
+			<div class="clear"></div>
+			<!-- 个人认证 -->
+			<div style="display: block;" class="tab_recharge_bd">
+				<script type="text/javascript">
+					$(function(){
+						$("#j_set_IDNO").click(function(){
+							$("#box_j_set_IDNO").slideToggle();
+						});
+						$("#j_set_psw").click(function(){
+							$("#box_j_set_psw").slideToggle();
+						});
+						$("#j_set_email").click(function(){
+							$("#box_j_set_email").slideToggle();
+						});
+						$("#j_set_cd").click(function(){
+							$("#box_j_set_cd").slideToggle();
+						});
+					});
+				</script>
+				<div class="account_info">
 					<ul>
-						<li class="cur">个人基本信息</li>
-						<li>认证信息</li>
-						<li>个人学历信息</li>
-						<li>个人工作信息</li>
-						<li>房产信息</li>
-						<li>车产信息</li>
+						<li><strong>绑定手机</strong><span>139****5737</span></li>
+						<li><strong>实名认证</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_IDNO">设置</a></i>
+							<div class="account_realname" id="box_j_set_IDNO"  style="display:none;">
+								<ul>
+									<li><label for="realname"><i>*</i>真实姓名：</label><input type="text" name="realname"></li>
+									<li><label for="idcard"><i>*</i>身份证号：</label><input type="text" name="idcard"></li>
+									<li><input type="submit" class="sub_btn" value="认证" style="cursor:pointer;"></li>
+								</ul>
+							</div>
+						</li>
+						<!--<li><strong>登录密码</strong><span>******</span><i>修改</i></li>-->
+						<li><strong>交易密码</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_psw">设置</a></i>
+						<div class="account_realname"  id="box_j_set_psw" style="display:none;">
+								<ul>
+									<li><label for="realname"><i>*</i>交易密码：</label><input type="text" name="realname"></li>
+									<li><label for="idcard"><i>*</i>再次确认：</label><input type="text" name="idcard"></li>
+									<li><input type="submit" class="sub_btn" value="保存"></li>
+								</ul>
+							</div>
+						</li>
+						<li><strong>绑定邮箱</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_email">设置</a></i>
+							<div class="account_realname" id="box_j_set_email" style="display:none;">
+								<ul>
+									<li><label for="realname"><i>*</i>请输入邮箱号：</label><input type="text" name="realname"></li>
+									<li><input type="submit" class="sub_btn sub_btn-1" value="发送确认邮件"></li>
+								</ul>
+							</div>
+						</li>
+						<li><strong>绑定银行卡</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_cd">设置</a></i>
+							<div class="account_realname"  id="box_j_set_cd" style="display:none;">
+								<ul>
+									<li><label for="realname"><i>*</i>姓名：</label>*万军</li>
+									<li><label for="realname"><i>*</i>身份证号：</label>420324*******1014</li>
+									<li><label for="realname"><i>*</i>银行卡号：</label>
+										<select name="" id="">
+										<option value="">招商银行</option>
+										<option value="">招商银行</option>
+										<option value="">招商银行</option>
+										</select>
+									</li>
+									<li><label for="realname"><i>*</i>开户行所在地：</label>
+										<select name="" id="">
+										<option value="">北京市</option>
+										</select>
+										<select name="" id="">
+										<option value="">海淀区</option>
+										</select>
+									</li>
+									<li><label for="realname"><i>*</i>支行名称：</label><input type="text" name="realname" class="mr10"></li>
+									<li><label for="realname"><i>*</i>银行卡号：</label><input type="text" name="realname"></li>
+									<li><label for="realname"><i>*</i>确认银行卡号：</label><input type="text" name="realname"></li>
+									<li><input type="submit" class="sub_btn" value="保存"></li>
+								</ul>
+							</div>
+						</li>
 					</ul>
 				</div>
-				<script type="text/javascript">
-				$(function(){
-					$("#j_set_IDNO").click(function(){
-						$("#box_j_set_IDNO").slideToggle();
-					});
-					$("#j_set_psw").click(function(){
-						$("#box_j_set_psw").slideToggle();
-					});
-					$("#j_set_email").click(function(){
-						$("#box_j_set_email").slideToggle();
-					});
-					$("#j_set_cd").click(function(){
-						$("#box_j_set_cd").slideToggle();
-					});
-				});
-				</script>
-				<div class="account_main">
-					<div class="account_info">
-						<ul>
-							<li><strong>绑定手机</strong><span>139****5737</span></li>
-							<li><strong>实名认证</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_IDNO">设置</a></i>
-								<div class="account_realname" id="box_j_set_IDNO"  style="display:none;">
-									<ul>
-										<li><label for="realname"><i>*</i>真实姓名：</label><input type="text" name="realname"></li>
-										<li><label for="idcard"><i>*</i>身份证号：</label><input type="text" name="idcard"></li>
-										<li><input type="submit" class="sub_btn" value="认证" style="cursor:pointer;"></li>
-									</ul>
+			</div>
+			<!-- 基本信息 -->
+			<div class="tab_recharge_bd pos_rel">
+				<form class="safe-info f16 pt10" method="post" action="">
+					<a href="javascript:;" class="pos_abs btn-edit f14"><i class="iconfont">&#xe633;</i><span class="blue">编辑个人资料</span></a>
+					<ul class="clearfix">
+						<li class="title"><span>账号：</span></li>
+						<li class="info">15133658421</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>性别：</span></li>
+						<li class="info">男</li>
+						<li class="edit">
+							<div class="pos_rel simulate-select">
+					            <input type="text" name="" class="local provin_select f16" value="--请选择--" readonly />
+				           		<div class="provin_con dis_none bg-white">
+				                   <dl>
+				                      <dd>男</dd>
+				                      <dd>女</dd>
+				                   </dl>
+				                </div>
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>婚姻状况：</span></li>
+						<li class="info">已婚</li>
+						<li class="edit">
+							<div class="pos_rel simulate-select">
+					            <input type="text" name="" class="local provin_select f16" value="--请选择--" readonly />
+				           		<div class="provin_con dis_none bg-white">
+				                   <dl>
+				                      <dd>已婚</dd>
+				                      <dd>未婚</dd>
+				                   </dl>
+				                </div>
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>学历：</span></li>
+						<li class="info">专科</li>
+						<li class="edit">
+							<div class="pos_rel simulate-select">
+					            <input type="text" name="" class="local provin_select f16" value="--请选择--" readonly />
+				           		<div class="provin_con dis_none bg-white">
+				                   <dl>
+				                      <dd>本科</dd>
+				                      <dd>专科</dd>
+				                   </dl>
+				                </div>
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>居住地址：</span></li>
+						<li class="info">北京北京市朝阳区</li>
+						<li class="edit">
+							<div id="sjld" class="pos_rel clearfix sjld">
+								<div class="m_zlxg" id="shenfen">
+									<p title="">选择省份</p>
+									<div class="m_zlxg2">
+										<ul></ul>
+									</div>
 								</div>
-							</li>
-							<!--<li><strong>登录密码</strong><span>******</span><i>修改</i></li>-->
-							<li><strong>交易密码</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_psw">设置</a></i>
-							<div class="account_realname"  id="box_j_set_psw" style="display:none;">
-									<ul>
-										<li><label for="realname"><i>*</i>交易密码：</label><input type="text" name="realname"></li>
-										<li><label for="idcard"><i>*</i>再次确认：</label><input type="text" name="idcard"></li>
-										<li><input type="submit" class="sub_btn" value="保存"></li>
-									</ul>
+								<div class="m_zlxg" id="chengshi">
+									<p title="">选择城市</p>
+									<div class="m_zlxg2">
+										<ul></ul>
+									</div>
 								</div>
-							</li>
-							<li><strong>绑定邮箱</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_email">设置</a></i>
-								<div class="account_realname" id="box_j_set_email" style="display:none;">
-									<ul>
-										<li><label for="realname"><i>*</i>请输入邮箱号：</label><input type="text" name="realname"></li>
-										<li><input type="submit" class="sub_btn sub_btn-1" value="发送确认邮件"></li>
-									</ul>
+								<div class="m_zlxg" id="quyu">
+									<p title="">选择区域</p>
+									<div class="m_zlxg2">
+										<ul></ul>
+									</div>
 								</div>
-							</li>
-							<li><strong>绑定银行卡</strong><span class="red">未设置</span><i><a href="javascript:void(0);" id="j_set_cd">设置</a></i>
-								<div class="account_realname"  id="box_j_set_cd" style="display:none;">
-									<ul>
-										<li><label for="realname"><i>*</i>姓名：</label>*万军</li>
-										<li><label for="realname"><i>*</i>身份证号：</label>420324*******1014</li>
-										<li><label for="realname"><i>*</i>银行卡号：</label>
-											<select name="" id="">
-											<option value="">招商银行</option>
-											<option value="">招商银行</option>
-											<option value="">招商银行</option>
-											</select>
-										</li>
-										<li><label for="realname"><i>*</i>开户行所在地：</label>
-											<select name="" id="">
-											<option value="">北京市</option>
-											</select>
-											<select name="" id="">
-											<option value="">海淀区</option>
-											</select>
-										</li>
-										<li><label for="realname"><i>*</i>支行名称：</label><input type="text" name="realname" class="mr10"></li>
-										<li><label for="realname"><i>*</i>银行卡号：</label><input type="text" name="realname"></li>
-										<li><label for="realname"><i>*</i>确认银行卡号：</label><input type="text" name="realname"></li>
-										<li><input type="submit" class="sub_btn" value="保存"></li>
-									</ul>
+								<input class="sfdq_num" type="hidden" value="" />
+								<input class="csdq_num" type="hidden" value="" />
+								<input class="sfdq_tj" type="hidden" value="" />
+								<input class="csdq_tj" type="hidden" value="" />
+								<input class="qydq_tj" type="hidden" value="" />
+								<input type="text" value="详细地址" class="f16 address" onclick="this.value=''" />
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>籍贯：</span></li>
+						<li class="info">湖北省十堰</li>
+						<li class="edit">
+							<div id="sjld2" class="pos_rel clearfix sjld">
+								<div class="m_zlxg" id="shenfen2">
+									<p title="">选择省份</p>
+									<div class="m_zlxg2">
+										<ul></ul>
+									</div>
 								</div>
-							</li>
-
-						</ul>
-					</div>
+								<div class="m_zlxg" id="chengshi2">
+									<p title="">选择城市</p>
+									<div class="m_zlxg2">
+										<ul></ul>
+									</div>
+								</div>
+								<input class="sfdq_num" type="hidden" value="" />
+								<input class="csdq_num" type="hidden" value="" />
+								<input class="sfdq_tj" type="hidden" value="" />
+								<input class="csdq_tj" type="hidden" value="" />
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>月收入：</span></li>
+						<li class="info">10000-30000</li>
+						<li class="edit">
+							<div class="pos_rel simulate-select">
+					            <input type="text" name="" class="local provin_select f16" value="--请选择--" readonly />
+				           		<div class="provin_con dis_none bg-white">
+				                   <dl>
+				                      <dd>3000-5000</dd>
+				                      <dd>5001-10000</dd>
+				                   </dl>
+				                </div>
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>住房条件：</span></li>
+						<li class="info">租房</li>
+						<li class="edit">
+							<div class="pos_rel simulate-select">
+					            <input type="text" name="" class="local provin_select f16" value="--请选择--" readonly />
+				           		<div class="provin_con dis_none bg-white">
+				                   <dl>
+				                      <dd>租房</dd>
+				                      <dd>已购房</dd>
+				                   </dl>
+				                </div>
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>是否购车：</span></li>
+						<li class="info">未购车</li>
+						<li class="edit">
+							<div class="pos_rel simulate-select">
+					            <input type="text" name="" class="local provin_select f16" value="--请选择--" readonly />
+				           		<div class="provin_con dis_none bg-white">
+				                   <dl>
+				                      <dd>已购车</dd>
+				                      <dd>未购车</dd>
+				                   </dl>
+				                </div>
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title"><span>职业：</span></li>
+						<li class="info">证券/期货</li>
+						<li class="edit">
+							<div class="pos_rel simulate-select">
+					            <input type="text" name="" class="local provin_select f16" value="--请选择--" readonly />
+				           		<div class="provin_con dis_none bg-white">
+				                   <dl>
+				                      <dd>证券/期货</dd>
+				                      <dd>教师</dd>
+				                   </dl>
+				                </div>
+							</div>
+						</li>
+					</ul>
+					<ul class="clearfix">
+						<li class="title">&nbsp;</li>
+						<li class="edit"><a href="javascript:;" class="white bg-orange btn-small txt-center pl10 pr10 save">保存</a><a href="javascript:;" class="ml10 btn-small-border txt-center pl10 pr10 cancel">取消</a></li>
+					</ul>
+				</form>
+			</div>
+			<!-- 我的资料 -->
+			<div class="tab_recharge_bd">
+				<div class="my-profile txt-center gray-64">
+					<ul class="clearfix f14 tHeader border-bot-e1 f16">
+						<li class="fl type">资料类型</li>
+						<li class="fl status">认证状态</li>
+						<li class="fl time-upload">上传时间</li>
+						<li class="fl time-check">审核时间</li>
+						<li class="fl direction">审核说明</li>
+						<li class="fl remark">备注信息</li>
+						<li class="fl datails">详情</li>
+					</ul>
+					<ul class="border-bot-e1 clearfix">
+						<li class="fl type">1</li>
+						<li class="fl status">待认证</li>
+						<li class="fl time-upload">2015-05-09</li>
+						<li class="fl time-check">2016-06-25</li>
+						<li class="fl direction">说明说明</li>
+						<li class="fl remark">量众易贷10001期 1000份</li>
+						<li class="fl datails"><a href="#" class="blue">详细</a></li>
+					</ul>
+					<div class="f12 pt10">暂无记录!</div>
 				</div>
 			</div>
-			<!---->
 		</div>
 	</div>
 </div>
